--- a/SlccDiscordBot/SlccDiscordBot.csproj
+++ b/SlccDiscordBot/SlccDiscordBot.csproj
@@ -7,11 +7,15 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
+    <PackageReference Include="Google.Apis.Calendar.v3" Version="1.36.1.1384" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="json\BotConfig.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="json\credentials.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
